--- a/themes/wind/css/screen.css
+++ b/themes/wind/css/screen.css
@@ -1092,7 +1092,7 @@ div#g-action-status {
     float: left;
     height: 30px;
     width: 90px;
-    background-color: yellow;
+/*    background-color: yellow;*/
     vertical-align: middle;
 }
 .g-menu li{
